# Aggregate-Task

./: CMakeLists.txt  aggregate.h  main.cpp
